Puni Theme/Puni.css
/* ... */
/* Completed - Marill & Oshawott */
body[data-query*='status":2'] {
	--background-image: url(https://i.imgur.com/T3cijHr.jpg);
	--banner-image: url(https://i.imgur.com/yYoiYrp.jpg);
	--banner-character:
		url(https://i.imgur.com/ibjgQRx.png) calc(50% + 350px) calc(100% + 13px) / auto 244px,
		url(https://i.imgur.com/UOWOEQ6.png) calc(50% - 340px) calc(100% - 33px) / auto 284px;
	--accent-bright: 195, 95%, 80%;
	--accent-dark: 195, 98%, 73%;
	--complementary: 53, 93%, 18%;
}

/* Paused - Jiggly & Minccino */
body[data-query*='status":3'] {
	--background-image: url(https://i.imgur.com/6LMccTP.jpg);
	--banner-image: url(https://i.imgur.com/MPJqqhJ.jpg);
	--banner-character:
		url(https://i.imgur.com/1DZMVIE.png) calc(50% + 360px) calc(100% + 30px) / auto 260px,
		url(https://i.imgur.com/qJB3cQB.png) calc(50% + 220px) calc(100% + 30px) / auto 290px;
	--accent-bright: 338, 46%, 90%;
	--accent-dark: 345, 30%, 87%;
	--complementary: 148, 40%, 33%;
}

/* Dropped - Rolycoly/Carkol */
body[data-query*='status":4'] {
	--background-image: url(https://i.imgur.com/PXNXNYU.jpg);
	--banner-image: url(https://i.imgur.com/0hGlTuH.jpg);
	--banner-character:
		url(https://i.imgur.com/mAZXsVF.png) calc(50% + 350px) calc(100% + 4px) / auto 230px,
		url(https://i.imgur.com/qyaxbNU.png) calc(50% - 320px) calc(100% + 34px) / auto 320px;
	--accent-bright: 23, 100%, 75%;
	--accent-dark: 25, 100%, 63%;
	--complementary: 3, 25%, 15%;
	--accent-image-opacity: 0.15;
}

/* Planned - Butterfree & Togedemaru */
body[data-query*='status":6'] {
	--background-image: url(https://i.imgur.com/bf3pFX7.jpg);
	--banner-image: url(https://i.imgur.com/Xh9tnsU.jpg);
	--banner-character:
		url(https://i.imgur.com/432Wfj5.png) calc(50% + 350px) calc(100% - 20px) / auto 284px,
		url(https://i.imgur.com/N9hqTEx.png) calc(50% - 330px) calc(100% + 10px) / auto 194px;
	--accent-bright: 214, 44%, 94%;
	--accent-dark: 214, 47%, 88%;
	--complementary: 126, 34%, 32%;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~*\
  !BASE @Scrollbar
\*~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* Firefox */

* {
	scrollbar-color: hsl(var(--accent-dark)) hsl(var(--relief));
}

/* Chrome */

*::-webkit-scrollbar {
	background: hsl(var(--relief));
}

*::-webkit-scrollbar-button:vertical {
	background: center / 10px auto no-repeat transparent;
} *::-webkit-scrollbar-button:vertical:start {
	background-image: url(https://i.imgur.com/Cu2u9Hu.png);
} *::-webkit-scrollbar-button:vertical:end {
	background-image: url(https://i.imgur.com/0YI7VxA.png);
} *::-webkit-scrollbar-button:horizontal {
	background: center / auto 10px no-repeat transparent;
} *::-webkit-scrollbar-button:horizontal:start {
	background-image: url(https://i.imgur.com/BArw1oI.png);
} *::-webkit-scrollbar-button:horizontal:end {
	background-image: url(https://i.imgur.com/vqOtoms.png);
}

*::-webkit-scrollbar-corner {
	background: hsl(var(--relief));
}

*::-webkit-scrollbar-thumb {
	background: hsl(var(--accent-dark)) content-box;
	border: 0 solid transparent;
} *::-webkit-scrollbar-thumb:vertical {
	border-width: 0 2px;
} *::-webkit-scrollbar-thumb:horizontal {
	border-width: 2px 0;
} *::-webkit-scrollbar-thumb:hover {
	background-color: hsl(var(--accent-bright));
} 

*::-webkit-scrollbar-track {
	width: 5px;
}

/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ *\
  @Basic Items
\* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

a {
	color: hsl(var(--accent-bright));
	transition: color var(--time-short);
} a:hover {
	color: hsl(var(--accent-bright), 0.6);
}

input {
	font: 1rem/1 var(--font);
}

html {
	min-width: 750px;
	box-sizing: border-box;
	font: 13.2px/1 var(--font);
} *, *::before, *::after {
	box-sizing: inherit;
}

/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ *\
  @Containers
\* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

body.ownlist {
	background: var(--background-image) center / cover fixed;
	color: hsl(var(--text-dark));
	font: inherit;
}

#list-container {
	display: flex;
	width: 100%;
	flex-flow: column nowrap;
	border: none;
	background: none;
}

/* Ad area */

div[style="padding-top: 8px"] {
	padding: 0 !important;
}

.list-block {
	position: relative;
	min-height: calc(100vh - 412px);
	padding-bottom: 50px;
	margin: 0 !important;
	order: 3;
}

.list-unit {
	width: 100%;
}

.list-block::before,
.list-unit::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
} .list-block::before {
	background: hsla(var(--complementary), .45);
} .list-unit::before {
	background: hsla(var(--accent-dark), var(--accent-image-opacity));
	-webkit-mask: var(--pattern-pokeballs) repeat center / 220px 220px;
	mask: var(--pattern-pokeballs) repeat center / 220px 220px;
}

.list-table {
	display: flex;
	width: 96%;
	width: 712px;
	border: none;
	flex-flow: row wrap;
} @media (min-width: 1088px) {
	.list-table { width: 1068px; }
} @media (min-width: 1444px) {
	.list-table { width: 1424px; }
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~*\
  !HEADER @Basic
\*~~~~~~~~~~~~~~~~~~~~~~~~~*/

.header {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 10;
	width: 100%;
	height: 52px;
	margin: 0;
	color: hsl(var(--text-dark));
	pointer-events: none;
}

.header .header-title,
.header .header-menu {
	pointer-events: auto;
}

.header a,
.header .header-menu .btn-menu > a,
.header .header-info > a {
	color: hsl(var(--text-dark));
} .header a:hover,
.header .header-menu .btn-menu > a:hover,
.header .header-info > a:hover {
	color: hsla(var(--text-dark), 0.6);
	text-decoration: none;
}

.header .header-title {
	left: 8px;
	top: 8px;
	width: 36px;
	height: 36px;
	background: var(--pokeball-outer);
	border-right: 2px solid var(--pokeball-outer);
	border-radius: 50%;
	transform: rotate(-15deg);
	transition: all var(--time-medium);
} .header .header-title:hover {
	transform: scale(1.1) rotate(-20deg);
}
/* ... */

